:hammer: fix: overflow hidden

--- a/src/compo/content/currentprojects/currentprojects.scss
+++ b/src/compo/content/currentprojects/currentprojects.scss
@@ -2,6 +2,7 @@
     margin-top: 5px;
     // border: 1px solid;
     padding: 10px 0;
+    overflow: hidden;
 
     .current-project-title{
         display: flex;
