--- a/src/compo/content/currentprojects/projectcard/projectcard.scss
+++ b/src/compo/content/currentprojects/projectcard/projectcard.scss
@@ -5,6 +5,7 @@
   width: 325px;
   max-width: 350px;
   margin-right: 10px;
+  min-width: 287px;
 
   .project-card-title {
     font-size: 1.1rem;
